--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -66,7 +66,12 @@
 .display {
   display: none;
 }
-
+.dropdown-toggle {
+  display: flex;
+  align-items: center;
+  justify-items: center;
+  gap: 5px;
+}
 // .dropdown{
 //     @media screen and (max-width:48em){
 //       display:flex;
