--- a/css/style.css
+++ b/css/style.css
@@ -210,7 +210,7 @@ html {
 }
 
 .hero-bg-container {
-  background-image: url("/img/hero-img.png");
+  background-image: url("img/hero-img.png");
   width: 100%;
   background-position: center;
   background-repeat: no-repeat;
