--- a/css/style.css
+++ b/css/style.css
@@ -210,7 +210,7 @@ html {
 }
 
 .hero-bg-container {
-  background-image: url("/img/hero-img.png");
+  background-image: url("hero-img.png");
   width: 100%;
   background-position: center;
   background-repeat: no-repeat;
@@ -665,7 +665,7 @@ input.hero-form::placeholder {
   -o-border-radius: 16px;
 }
 .active-promotions-section-container__gallery-container figure:nth-child(2) {
-  background-image: url("/img/phone.jpg");
+  background-image: url("phone.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
