--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -1,5 +1,5 @@
 .hero-bg-container {
-  background-image: url("/img/hero-img.png");
+  background-image: url("hero-img.png");
   width: 100%;
   background-position: center;
   background-repeat: no-repeat;
