--- a/scss/_active-Promotions.scss
+++ b/scss/_active-Promotions.scss
@@ -39,7 +39,7 @@
       -o-border-radius: 16px;
     }
     & figure:nth-child(2) {
-      background-image: url("phone.jpg");
+      background-image: url("../img/phone.jpg");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
