--- a/css/style.css
+++ b/css/style.css
@@ -665,7 +665,7 @@ input.hero-form::placeholder {
   -o-border-radius: 16px;
 }
 .active-promotions-section-container__gallery-container figure:nth-child(2) {
-  background-image: url("phone.jpg");
+  background-image: url("../img/phone.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
