--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -157,37 +157,37 @@ input.hero-form::placeholder {
 //   margin-top: 5rem;
 // }
 
-.tablet-nav--container {
-  padding-top: 5rem;
-  align-self: center !important;
-  justify-self: center !important;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
+// .tablet-nav--container {
+//   padding-top: 5rem;
+//   align-self: center !important;
+//   justify-self: center !important;
+//   display: flex;
+//   flex-direction: column;
+//   gap: 20px;
 
-  & a {
-    font-size: 1.7rem;
-    color: var(--white);
-    &:hover {
-      color: var(--light-blue);
-    }
-  }
-}
+//   & a {
+//     font-size: 1.7rem;
+//     color: var(--white);
+//     &:hover {
+//       color: var(--light-blue);
+//     }
+//   }
+// }
 
-.tab-register {
-  align-self: center !important;
-  justify-self: center !important;
-  display: flex;
-  gap: 2rem;
-  padding-top: 3rem;
-  & a {
-    color: var(--white);
-    padding: 1rem 2rem;
-    background-color: var(--dark-blue);
-    font-size: 2rem;
-    border-radius: 16px;
-  }
-}
+// .tab-register {
+//   align-self: center !important;
+//   justify-self: center !important;
+//   display: flex;
+//   gap: 2rem;
+//   padding-top: 3rem;
+//   & a {
+//     color: var(--white);
+//     padding: 1rem 2rem;
+//     background-color: var(--dark-blue);
+//     font-size: 2rem;
+//     border-radius: 16px;
+//   }
+// }
 
 // .btn-close-white {
 //   // padding: 2rem 2rem 0 0;
