--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,44 +1,37 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    list-style: none;
-    font-size: 1.5rem;
-    font-family: 'Urbanist', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  list-style: none;
+  font-size: 1.5rem;
+  font-family: "Urbanist", sans-serif;
+}
+
+html {
+  position: relative;
+  overflow-x: hidden;
+  font-size: 62.5%;
+  @media screen and (max-width: 64em) {
+    font-size: 59.5%;
   }
-  
-  html {
-    font-size: 62.5%;
-    @media screen and (max-width:64em){
-      font-size:59.5%;
-     }
-     // tablet(portrait === 768px)
-     @media screen and (max-width:48em){
-      font-size:56.3%;
-     }
-     // phone(portrait === 480px)
-     @media screen and (max-width:30em){
-      font-size:53.1%;
-     }
-      // phone(portrait === 375px)
-     @media screen and (max-width:23em){
-      font-size:50%;
-     }
-     @media screen and (max-width:17.5em){
-      font-size:40%;
-     }
+  // tablet(portrait === 768px)
+  @media screen and (max-width: 48em) {
+    font-size: 56.3%;
   }
-  
-
-
-  
-  
-  
-  
-  
-
-
-  .display{
-    display:none;
+  // phone(portrait === 480px)
+  @media screen and (max-width: 30em) {
+    font-size: 53.1%;
   }
+  // phone(portrait === 375px)
+  @media screen and (max-width: 23em) {
+    font-size: 50%;
+  }
+  @media screen and (max-width: 17.5em) {
+    font-size: 40%;
+  }
+}
+
+.display {
+  display: none;
+}
