--- a/scss/_helperclasses.scss
+++ b/scss/_helperclasses.scss
@@ -39,6 +39,12 @@
   -o-border-radius: 8px;
 }
 
+.d-lg-none {
+  display: none;
+  @media screen and (max-width: 64em) {
+    display: block;
+  }
+}
 .d-none-tab {
   @media screen and (max-width: 48em) {
     display: none;
@@ -55,6 +61,9 @@
   @media screen and (max-width: 30em) {
     display: block;
   }
+}
+.d-none-desktop {
+  display: none;
 }
 .btn--view-more {
   margin: 10px auto;
