--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -9,7 +9,8 @@
 }
 
 html {
-  position: relative;
+  margin: 0;
+  padding: 0;
   overflow-x: hidden;
   font-size: 62.5%;
   @media screen and (max-width: 64em) {
@@ -30,6 +31,10 @@ html {
   @media screen and (max-width: 17.5em) {
     font-size: 40%;
   }
+}
+body {
+  overflow-x: hidden !important;
+  position: relative;
 }
 
 .display {
