--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -67,7 +67,7 @@
   outline: none;
   background-color: var(--white);
   display: none;
-  @media screen and (max-width: 64em) {
+  @media screen and (max-width: 48em) {
     display: block;
   }
 }
@@ -120,18 +120,24 @@
 .tablet-nav--container {
   position: absolute;
   right: 0;
-  background-color: #000000;
+  background-color: #000000e0;
   height: 100vh;
   width: 50%;
   transform: translateX(100%);
   z-index: 1000;
-  display: none;
+  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  transition: transform 0.5s ease-in-out;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.5s ease-in-out;
   @media screen and (max-width: 48em) {
-    display: flex;
+    opacity: 1;
+    visibility: visible;
+  }
+  @media screen and (max-width: 48em) {
+    width: 70%;
   }
 }
 .tablet-nav--container.open-tablet-menu {
